--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Activity Tracker</string>
+    
+    <string name="title_registration">Регистрация</string>
+    <string name="registration_login">Логин</string>
+
+    <string name="title_login">Вход</string>
+    <string name="login">Войти</string>
+
+    <string name="menu_activities">Активности</string>
+    <string name="menu_profile">Профиль</string>
 </resources>
