--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,16 @@
 
     <string name="menu_activities">Активности</string>
     <string name="menu_profile">Профиль</string>
+
+    <string name="activity_yesterday">Вчера</string>
+    <string name="activity_details_start">Старт</string>
+    <string name="activity_details_finish">Финиш</string>
+    <string name="activity_details_comment">Комментарий</string>
+    <string name="activity_details_trash">Корзина</string>
+    <string name="activity_details_share">Поделиться</string>
+
+    <string-array name="activities_name">
+        <item>Мое</item>
+        <item>Пользователей</item>
+    </string-array>
 </resources>
